objects/Indicator_Area__c.object
<CustomObject>
    <description>This object is part of the Interventions app. Indicator Area defines a high-level intervention focus area (e.g., Behavior, Attendance, English Language Arts). Students are assigned to Indicator Areas in order to schedule them in Intervention Programs and Sections.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not this indicator area is available to assign to students on the Add Students to Indicator Areas screen. If you uncheck this field, SchoolForce deactivates any associated Program, Staff/Section, and Student/Section records.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IA_Description__c</fullName>
        <inlineHelpText>Description of the Indicator Area</inlineHelpText>
        <label>Indicator Area Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicator_Area_Type__c</fullName>
        <inlineHelpText>This field categorizes Indicator Areas for reporting purposes.  These are the highest level of Intervention Categories, similar to Subjects.  Admins may modify the values in Setup.</inlineHelpText>
        <label>Indicator Area Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Behavior</fullName>
                    <label>SEL/SED</label>
                </value>
                <value>
                    <fullName>ELA/Literacy</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Indicator Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Indicator_Area_Type__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Indicator Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indicator Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>